--- a/Example/IRLSizeExample/MainStoryboard.storyboard
+++ b/Example/IRLSizeExample/MainStoryboard.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AeK-B6-oLd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AeK-B6-oLd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,40 +22,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2eH-vR-4gg">
-                                <rect key="frame" x="0.0" y="20" width="375" height="128"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZFe-Si-ebx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A16-Cm-dZF">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" id="QEE-Wb-AKZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                <subviews>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YB9-WO-T3n" customClass="RulerView" customModule="IRLSizeExample" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="20" width="375" height="128"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </view>
-                                                </subviews>
-                                            </view>
-                                            <vibrancyEffect>
-                                                <blurEffect style="light"/>
-                                            </vibrancyEffect>
-                                        </visualEffectView>
-                                    </subviews>
-                                </view>
-                                <constraints>
-                                    <constraint firstItem="YB9-WO-T3n" firstAttribute="leading" secondItem="2eH-vR-4gg" secondAttribute="leading" id="1Xc-TV-WVS"/>
-                                    <constraint firstAttribute="bottom" secondItem="YB9-WO-T3n" secondAttribute="bottom" id="3gI-dD-q69"/>
-                                    <constraint firstAttribute="trailing" secondItem="YB9-WO-T3n" secondAttribute="trailing" id="AsU-zP-6eU"/>
-                                    <constraint firstItem="YB9-WO-T3n" firstAttribute="top" secondItem="2eH-vR-4gg" secondAttribute="top" id="Nif-bd-gsP"/>
-                                    <constraint firstAttribute="height" constant="128" id="uB4-ru-eh8"/>
-                                </constraints>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Width" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bs4-HA-XU5">
                                 <rect key="frame" x="165" y="638.5" width="45.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -72,18 +38,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="mz2-Sx-qRr" firstAttribute="trailing" secondItem="6gr-T9-C85" secondAttribute="trailingMargin" id="0PV-Av-yde"/>
-                            <constraint firstItem="2eH-vR-4gg" firstAttribute="top" secondItem="go1-Yq-6oD" secondAttribute="bottom" id="Dff-cz-mJb"/>
-                            <constraint firstItem="2eH-vR-4gg" firstAttribute="leading" secondItem="6gr-T9-C85" secondAttribute="leading" id="Fms-1Z-LnO"/>
                             <constraint firstAttribute="centerY" secondItem="mz2-Sx-qRr" secondAttribute="centerY" priority="750" id="KhI-4c-xrv"/>
-                            <constraint firstAttribute="trailing" secondItem="2eH-vR-4gg" secondAttribute="trailing" id="UDB-I8-aYg"/>
                             <constraint firstItem="4PU-od-t1s" firstAttribute="top" secondItem="Bs4-HA-XU5" secondAttribute="bottom" constant="8" symbolic="YES" id="WE7-Cx-x1a"/>
                             <constraint firstAttribute="centerX" secondItem="Bs4-HA-XU5" secondAttribute="centerX" id="mOa-9n-quh"/>
-                            <constraint firstItem="mz2-Sx-qRr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="2eH-vR-4gg" secondAttribute="bottom" constant="8" symbolic="YES" id="u3x-14-ALN"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="heightLabel" destination="mz2-Sx-qRr" id="ZHY-uj-U5x"/>
-                        <outlet property="rulerView" destination="YB9-WO-T3n" id="MiC-od-CsP"/>
                         <outlet property="widthLabel" destination="Bs4-HA-XU5" id="WnO-4U-oLI"/>
                     </connections>
                 </viewController>
